typescript/checker/tests/conformance/expressions/typeGuards/typeGuardsInClassMethods.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            169,
        ),
        hi: BytePos(
            172,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInClassMethods.ts:5:5
  |
5 | var num: number;
  |     ^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            187,
        ),
        hi: BytePos(
            191,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInClassMethods.ts:6:5
  |
6 | var var1: string | number;
  |     ^^^^

